--- a/custom.css
+++ b/custom.css
@@ -117,6 +117,14 @@ header button:hover{
     font-size: 12px;
 }
 
+.myskills .me button{
+    font-size: 12px;
+    padding: 5px 20px 5px 20px;
+    border: none;
+    background: gold;
+    color: #35424a;
+}
+
 .myskills .img img{
     width: 100%;
     height: 232px;
