--- a/custom.css
+++ b/custom.css
@@ -9,6 +9,12 @@ h1, h2, h3, h4, h5, h6, p{
 
 /* global */
 
+.date{
+    font-size: 10px;
+    font-style: italic;
+    color: gold;
+}
+
 .highlight{
     color: gold;
 }
@@ -239,5 +245,95 @@ footer a:hover{
 
 #tac p{
     font-size: 12px;
+    line-height: 28px;
+}
+
+/* courosel */
+
+.blogPosts{
+    padding: 20px 0 20px 0;
+    background: rgb(33, 33, 33);
+    color: aliceblue;
+}
+
+.blogPosts h2{
+    font-size: 20px;
+    text-align: center;
+}
+
+.owl-carousel .item{
+    padding: 20px;
+}
+
+.owl-nav{
+    width: 100px;
+    margin: auto;
+}
+
+.owl-nav button{
+    width: 50px;
+}
+
+.owl-nav span{
+    font-size: 30px;
+}
+
+.item .img,
+.item .desk{
+    height: 50%;
+}
+
+.item .img img{
+    width: 100%;
+    height: 200px;
+}
+
+.item .desk h3{
+    font-size: 20px;
+    padding: 10px 0 0 0;
+}
+
+.item .desk p{
+    font-size: 12px;
+    padding: 10px 0 10px 0;
+    overflow: hidden;
+}
+
+.item .desk button{
+    width: 100%;
+    padding: 10px;
+    background: rgb(19, 19, 19);
+    color: aliceblue;
+    border: none;
+    font-size: 12px;
+}
+
+/* modal blog */
+
+.modal-content{
+    background: rgb(33, 33, 33);
+    color: aliceblue;
+    font-size: 12px;
+}
+
+.modal-footer,
+.modal-header{
+    border: none;
+}
+
+.modal-header h4{
+    font-size: 20px;
+}
+
+.modal-footer button{
+    color: aliceblue;
+}
+
+.modal-body img{
+    width: 100%;
+}
+
+.modal-body p{
+    padding: 20px 0 0 0;
     line-height: 28px;
 }
