--- a/custom.css
+++ b/custom.css
@@ -24,7 +24,7 @@ header{
     text-align: center;
     padding-top: 30vh;
     font-family: Arial, Helvetica, sans-serif;
-    background: url(./showcase.jpg) no-repeat center center;
+    background: url(./new_showcase.jpg) no-repeat center center;
     background-size: cover;
     color: aliceblue;
 }
